add relationship between category and question